@@ -1044,9 +1044,14 @@ public class AjBuildManager implements IOutputClassFileNameProvider, IBinarySour
 			for (int i = 0; i < cps.size(); i++) {
 				classpaths[i] = cps.get(i);
 			}
-			//FileSystem fileSystem = getLibraryAccess(classpaths, filenames);
-			// TODO: This will probably fail other tests, it is just an experiment
-			FileSystem fileSystem = buildConfig.getBuildArgParser().getLibraryAccess();
+			FileSystem fileSystem = getLibraryAccess(classpaths, filenames);
+
+			// Use upstream method to generate '--add-reads', '--add-exports' info and copy it into our FileSystem instance.
+			// See https://github.com/eclipse/org.aspectj/issues/145.
+			FileSystem fileSystemTemp = buildConfig.getBuildArgParser().getLibraryAccess();
+			fileSystem.moduleUpdates = fileSystemTemp.moduleUpdates;
+			fileSystemTemp.cleanup();
+
 			environment = new StatefulNameEnvironment(fileSystem, state.getClassNameToFileMap(), state);
 			state.setFileSystem(fileSystem);
 			state.setNameEnvironment(environment);
